# otto-gateway-message-producer

./: .env.example  README.md  pyproject.toml
src/: constants.py  producers.py  rabbitmq.py
